Add About, Gallery, other minor changes

--- a/gallery.html
+++ b/gallery.html
@@ -1,12 +1,11 @@
 <!DOCTYPE html>
 <html>
     <head>
-    
+
     </head>
     <body>
-        <h1>Hi! I'm Brandon.</h1>
-        <h2>Welcome to my portfolio.</h2>
-        <a href="about.html" alt="About">About</a>
+        <h1>Gallery</h1>
+        <a href="index.html" alt="Index">Index</a>
         <a href="gallery.html" alt="Gallery">Gallery</a>
     </body>
 </html>
